maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:32: error: ':' expected but ',' found.
  def conditionSuivreMur(dir1, dir2):Int = {
                             ^IslandMaze:41: error: identifier expected but '}' found.
} 
^